# futures-concurrency

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: bench.rs  compare.rs  utils.rs
benches/utils/: countdown_futures.rs  countdown_streams.rs  mod.rs
examples/: happy_eyeballs.rs
src/: join.rs  lib.rs  maybe_done.rs  merge.rs  stream.rs  stream_ext.rs
src/collections/: group_inner.rs  inner_group.rs  mod.rs  vec.rs
src/concurrent_stream/: concurrent_foreach.rs  convert.rs  drain.rs  enumerate.rs  for_each.rs  from_concurrent_stream.rs  from_stream.rs  into_concurrent_iterator.rs  into_concurrent_stream.rs  limit.rs  map.rs  mod.rs  passthrough.rs  take.rs  try_for_each.rs
src/ext/: mod.rs  stream.rs
src/first_ok/: array.rs  mod.rs  vec.rs
src/future/: future_group.rs  future_set.rs  futures_ext.rs  into_future.rs  mod.rs  wait_until.rs
src/future/common/: array.rs  mod.rs  tuple.rs  vec.rs
src/future/first_ok/: array.rs  mod.rs  vec.rs
src/future/join/: array.rs  mod.rs  tuple.rs  vec.rs
src/future/merge/: array.rs  mod.rs  tuple.rs  vec.rs
src/future/race/: array.rs  mod.rs  tuple.rs  vec.rs
src/future/race_ok/: array.rs  error.rs  mod.rs  tuple.rs  vec.rs
src/future/race_ok/array/: error.rs  mod.rs
src/future/race_ok/tuple/: error.rs  mod.rs
src/future/race_ok/vec/: error.rs  mod.rs
src/future/try_join/: array.rs  mod.rs  tuple.rs  vec.rs
src/future/try_merge/: array.rs  mod.rs  vec.rs
src/join/: array.rs  mod.rs  tuple.rs  vec.rs
src/merge/: array.rs  mod.rs  tuple.rs  vec.rs
src/race/: array.rs  tuple.rs  vec.rs
src/stream/: into_stream.rs  mod.rs  stream.rs  stream_ext.rs  stream_group.rs  stream_set.rs  wait_until.rs
src/stream/chain/: array.rs  mod.rs  tuple.rs  vec.rs
src/stream/merge/: array.rs  mod.rs  tuple.rs  vec.rs
src/stream/zip/: array.rs  mod.rs  tuple.rs  vec.rs
src/try_join/: array.rs  mod.rs  vec.rs
src/utils/: array.rs  array_dequeue.rs  channel.rs  chunked_vec.rs  dummy_waker.rs  dyn_indexer.rs  fuse.rs  indexer.rs  maybe_done.rs  metadata.rs  mod.rs  pin.rs  poll_next_in_order.rs  poll_state.rs  private.rs  rng.rs  stream.rs  tuple.rs  waker.rs
src/utils/futures/: array.rs  mod.rs  vec.rs
src/utils/output/: array.rs  mod.rs  vec.rs
src/utils/poll_state/: array.rs  maybe_done.rs  mod.rs  poll_state.rs  vec.rs
src/utils/wakers/: dummy.rs  inline_waker.rs  mod.rs  readiness.rs  shared_arc.rs  shared_slice_waker.rs  waker_list.rs
src/utils/wakers/array/: awakeness.rs  mod.rs  no_std.rs  readiness.rs  readiness_array.rs  waker.rs  waker_array.rs
src/utils/wakers/vec/: awakeness.rs  mod.rs  no_std.rs  readiness.rs  readiness_vec.rs  waker.rs  waker_vec.rs
tests/: no_std.rs  pin_safety.rs  regression-155.rs  test.rs  try_join_tokio.rs
