[package]
name = "futures-concurrency"
version = "7.6.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/futures-concurrency"
documentation = "https://docs.rs/futures-concurrency"
description = "Structured concurrency operations for async Rust"
readme = "README.md"
edition = "2021"
keywords = ["async", "concurrency"]
categories = ["asynchronous", "concurrency"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
rust-version = "1.75.0"

[profile.bench]
debug = true

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "compare"
harness = false

[features]
default = ["std"]
std = ["alloc"]
alloc = ["dep:fixedbitset", "dep:slab", "dep:smallvec"]

[dependencies]
fixedbitset = { version = "0.5.7", default-features = false, optional = true }
futures-core = { version = "0.3", default-features = false }
futures-lite = "1.12.0"
pin-project = "1.0.8"
slab = { version = "0.4.8", optional = true }
smallvec = { version = "1.11.0", optional = true }
futures-buffered = "0.2.6"

[dev-dependencies]
async-io = "2.3.2"
async-std = { version = "1.12.0", features = ["attributes"] }
criterion = { version = "0.3", features = [
    "async",
    "async_futures",
    "html_reports",
] }
futures = "0.3.25"
futures-time = "3.0.0"
itertools = "0.12.1"
lending-stream = "1.0.0"
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["macros", "time", "rt-multi-thread"] }
